Revise img sources & correct React-Quill dependency

--- a/src/components/sections/Contact.astro
+++ b/src/components/sections/Contact.astro
@@ -19,7 +19,7 @@ import Map from "../ui/Map.astro";
 import messageUsLogo from "../../assets/message-us.webp";
 import brassDivider from "../../assets/brass-divider.webp";
 
-const backArrow = "../../../images/arrow.svg";
+const backArrow = "../../../arrow.svg";
 
 const storeHours: StoreHours | null = await officialStoreHours();
 ---
