--- a/src/components/sections/Products.astro
+++ b/src/components/sections/Products.astro
@@ -15,10 +15,18 @@ import divider from "../../assets/divider.webp";
   />
   <p class="mx-10 sm:mx-16 md:mx-28 text-[#452B1F]">
     At PT Pet Supply, we’ve been dedicated to providing healthy, trustworthy
-    products for pets for over 20 years. From food and toys to essential
-    supplies, our selection is carefully curated to meet the needs of your furry
-    companions. Our knowledgeable team is here to help you make informed choices
-    for your pet’s health and happiness.
+    products for pets for over 20 years. From high-quality food and toys to
+    essential supplies, our selection is carefully curated to meet the needs of
+    your furry companions. We also offer grooming items like brushes and
+    shampoos to keep your pets clean and comfortable, as well as medical
+    supplies to ensure their health and safety. Our store features a variety of
+    treats and chews designed for dental wellness, alongside beds and
+    accessories that prioritize comfort and happiness. With eco-friendly options
+    and toys that encourage mental stimulation, we aim to support the overall
+    wellness and joy of pets in every way possible.
+  </p>
+  <p class="mx-14 sm:mx-20 md:mx-36 text-[#452B1F] font-bold text-center pt-10">
+    Provided below is a complete list of our trusted product vendors.
   </p>
   <div class="mx-5 py-10">
     <ul class="flex-row justify-center text-center text-[#452B1F]">
