Debug admin.astro

--- a/src/pages/admin.astro
+++ b/src/pages/admin.astro
@@ -18,8 +18,8 @@ const storeHours = await officialStoreHours();
 
 import { getCollection } from "astro:content";
 
-const allTags = await getCollection("blog").then((collection: any) => {
-  const tags = collection.flatMap((entry: any) => entry.data.tags);
+const allTags = await getCollection("blog").then((collection) => {
+  const tags = collection.flatMap((entry) => entry.data.tags);
   return Array.from(new Set(tags));
 });
 ---
