Revise imports for Staff imgs

--- a/src/components/sections/ExternalLinks.astro
+++ b/src/components/sections/ExternalLinks.astro
@@ -7,15 +7,17 @@
     >
       Customer Resources:
     </h3>
-    <a
-      id="astro-loyalty-link"
-      href="https://secure.astroloyalty.com/members.php?ld=xZzugnkcBMFfSCrQA%2F4%3D"
-      target="_blank"
-      rel="noopener noreferrer"
-      class="inline-flex items-center justify-center text-3xl xl:text-4xl pt-1.5 tracking-wider custom-font link-underline z-10"
-    >
-      Astro Loyalty
-    </a>
+    <div class="flex flex-col md:flex-row items-center justify-center">
+      <a
+        id="astro-loyalty-link"
+        href="https://secure.astroloyalty.com/members.php?ld=xZzugnkcBMFfSCrQA%2F4%3D"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="inline-flex items-center justify-center text-3xl xl:text-4xl pt-1.5 tracking-wider custom-font link-underline z-10"
+      >
+        Astro Loyalty
+      </a>
+    </div>
   </div>
 </section>
 
