--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,6 +1,10 @@
+---
+import funnyCat from "../assets/404.webp";
+---
+
 <div class="container">
   <div class="inner-container">
-    <img src="src/assets/404.webp" alt="Funny cat" />
+    <img src={funnyCat.src} alt="Funny cat" />
     <h3 class="text">Whoopsies! You weren't supposed to see this page.</h3>
     <a href="/" class="link">Return to Store</a>
   </div>
