--- a/src/components/sections/Blog.astro
+++ b/src/components/sections/Blog.astro
@@ -31,7 +31,7 @@ const recentPosts = uniquePosts.slice(0, 3);
     <img
       src={brassSidebar.src}
       alt="Brass sidebar"
-      class="hidden min-[900px]:block absolute bottom-36 left-0 min-[900px]:-ml-4 lg:ml-0 min-[1150px]:ml-8 xl:ml-20 2xl:ml-32 min-[1700px]:ml-64 min-[1900px]:ml-80 h-[600px] lg:h-[750px] drop-shadow-2xl w-auto object-contain transform -scale-x-100"
+      class="hidden min-[900px]:block absolute bottom-36 left-0 min-[900px]:-ml-4 lg:ml-0 min-[1150px]:ml-8 xl:ml-20 2xl:ml-32 min-[1700px]:ml-64 min-[1900px]:ml-80 h-[600px] lg:h-[750px] w-auto object-contain transform -scale-x-100 drop-shadow-lg"
     />
   </div>
 
