--- a/src/components/sections/Contact.astro
+++ b/src/components/sections/Contact.astro
@@ -68,12 +68,12 @@ const storeHours: StoreHours | null = await officialStoreHours();
       <img
         src={messageUsLogo.src}
         alt="Message Us sign"
-        class="h-[150px] md:h-[180px] w-auto mx-auto mb-2"
+        class="h-[150px] md:h-[180px] w-auto mx-auto mb-2 drop-shadow-lg"
       />
       <img
         src={brassDivider.src}
         alt="Brass divider"
-        class="h-[50px] md:h-[70px] w-auto mx-auto transform -scale-x-100 drop-shadow-2xl"
+        class="h-[50px] md:h-[70px] w-auto mx-auto transform -scale-x-100 drop-shadow-lg"
       />
       <div class="py-3">
         <ContactForm client:load />
