--- a/src/components/sections/Grooming.astro
+++ b/src/components/sections/Grooming.astro
@@ -9,7 +9,7 @@ import groomingLogo from "../../assets/pet-grooming.webp";
   <img
     src={groomingLogo.src}
     alt="Pet Grooming logo"
-    class="h-[150px] md:h-[180px] lg:h-[235px] w-auto mx-auto mb-6"
+    class="h-[150px] md:h-[180px] lg:h-[235px] w-auto mx-auto mb-6 drop-shadow-lg"
   />
   <p class="mx-10 sm:mx-16 md:mx-28 text-[#452B1F]">
     Grooming services typically include a range of treatments to keep pets clean
