--- a/src/components/sections/Navbar.astro
+++ b/src/components/sections/Navbar.astro
@@ -53,7 +53,7 @@ const address = officialStoreInfo().address;
     <img
       src={openSignBackground.src}
       alt="Open/Close Sign Background"
-      class="absolute top-0 left-1/2 transform -translate-x-1/2 pb-1 -mt-2 min-[370px]:-mt-2.5 min-[430px]:-mt-3 min-[470px]:-mt-3.5 min-[500px]:-mt-4 min-[575px]:-mt-5 sm:-mt-6"
+      class="absolute top-0 left-1/2 transform -translate-x-1/2 pb-1 -mt-2 min-[370px]:-mt-2.5 min-[430px]:-mt-3 min-[470px]:-mt-3.5 min-[500px]:-mt-4 min-[575px]:-mt-5 sm:-mt-6 drop-shadow-lg"
       style="width: 195px; height: auto;"
     />
   </div>
