--- a/src/components/sections/Products.astro
+++ b/src/components/sections/Products.astro
@@ -11,7 +11,7 @@ import divider from "../../assets/divider.webp";
   <img
     src={products.src}
     alt="Products logo"
-    class="h-[130px] md:h-[160px] lg:h-[215px] w-auto mx-auto my-6 mt-16"
+    class="h-[130px] md:h-[160px] lg:h-[215px] w-auto mx-auto my-6 mt-16 drop-shadow-lg"
   />
   <p class="mx-10 sm:mx-16 md:mx-28 text-[#452B1F]">
     At PT Pet Supply, we’ve been dedicated to providing healthy, trustworthy
@@ -28,7 +28,7 @@ import divider from "../../assets/divider.webp";
   <p class="mx-14 sm:mx-20 md:mx-36 text-[#452B1F] font-bold text-center pt-10">
     Provided below is a complete list of our trusted product vendors.
   </p>
-  <div class="mx-5 py-10">
+  <div class="-mx-4 py-10">
     <ul class="flex-row justify-center text-center text-[#452B1F]">
       <Vendors client:load />
     </ul>
@@ -37,7 +37,7 @@ import divider from "../../assets/divider.webp";
     <img
       src={divider.src}
       alt="Brass fixture section divider"
-      class="pt-3 my-4 lg:my-12 h-[30%] w-auto mx-auto"
+      class="pt-3 my-4 lg:my-12 h-[30%] w-auto mx-auto drop-shadow-lg"
     />
   </div>
 </section>
