--- a/src/components/sections/Staff.astro
+++ b/src/components/sections/Staff.astro
@@ -9,15 +9,15 @@ const staffList = await officialStaffList();
 
 <section
   id="staff"
-  class="relative pb-10 tracking-wider text-center overflow-hidden -mt-48 mb-8 pt-56"
+  class="relative pb-10 tracking-wider text-center overflow-hidden -mt-64 mb-8 pt-68"
 >
   <img
     src={panel.src}
     alt="Wood paneling background"
-    class="absolute z-[-2] bottom-0 w-full h-[85%] object-cover"
+    class="panel absolute z-[-2] bottom-0 w-full h-[80%] object-cover"
   />
   <h3
-    class="inline-block p-4 md:p-6 font-bold text-4xl tracking-widest bg-[#7F0201] bg-opacity-80 text-white text-outline-white rounded-3xl"
+    class="inline-block px-4 md:px-5 py-3 md:py-4 font-bold text-4xl tracking-widest bg-[#7F0201] bg-opacity-80 text-white text-outline-white rounded-3xl"
     style={{ backdropFilter: "blur(35px)" }}
   >
     Meet Our Pack
