--- a/src/components/layouts/BlogLayout.astro
+++ b/src/components/layouts/BlogLayout.astro
@@ -42,6 +42,7 @@ const { title, description, publishDate, tags } =
   </head>
   <body>
     <Header transition:persist />
+    <canvas id="backgroundCanvas"></canvas>
     <article>
       <header>
         <time>{publishDate}</time>
@@ -69,4 +70,52 @@ const { title, description, publishDate, tags } =
   body {
     font-family: "Cenzo Flare", sans-serif;
   }
+
+  #backgroundCanvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -40;
+    filter: blur(50px) opacity(20%);
+  }
 </style>
+
+<script>
+  const canvas = document.getElementById(
+    "backgroundCanvas"
+  ) as HTMLCanvasElement;
+  const ctx = canvas!.getContext("2d");
+
+  const resizeCanvas = () => {
+    canvas!.width = window.innerWidth;
+    canvas!.height = window.innerHeight;
+    drawShapes();
+  };
+
+  const drawShapes = () => {
+    ctx!.clearRect(0, 0, canvas!.width, canvas!.height);
+    const warmColors = ["#FFC66D"];
+    for (let i = 0; i < 20; i++) {
+      const x = Math.random() * canvas!.width;
+      const y = Math.random() * canvas!.height;
+      const length = Math.random() * 400 + 50; // Length of the streak
+      const width = Math.random() * 40 + 2; // Width of the streak
+      const angle = Math.random() * Math.PI * 3; // Random angle for the streak
+      const color = warmColors[Math.floor(Math.random() * warmColors.length)];
+
+      ctx!.save();
+      ctx!.translate(x, y);
+      ctx!.rotate(angle);
+      ctx!.fillStyle = color;
+      ctx!.beginPath();
+      ctx!.ellipse(0, 0, length / 2, width / 2, 0, 0, Math.PI * 2);
+      ctx!.fill();
+      ctx!.restore();
+    }
+  };
+
+  window.addEventListener("resize", resizeCanvas);
+  resizeCanvas();
+</script>
