--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -71,7 +71,9 @@ const formatDate = (date: Date) => {
               class="w-[100%] h-[100%]"
             />
           </div>
-          <div class="flex space-x-1 pb-10 drop-shadow-lg">
+          <div
+            class="flex space-x-1 mx-4 md:mx-8 lg:12 xl:mx-16 2xl:mx-24 pb-10 drop-shadow-lg"
+          >
             {
               post?.data.tags.map((tag: string) => (
                 <button class="bg-[#7F0201] text-white text-md md:text-xl md:tracking-widest px-2 md:px-3 md:py-1 rounded-xl pointer-events-none">
@@ -80,7 +82,9 @@ const formatDate = (date: Date) => {
               ))
             }
           </div>
-          <article class="pb-16 text-lg text-[#452B1F]">
+          <article
+            class="mx-4 sm:mx-8 md:mx-16 lg:mx-24 xl:mx-32 2xl:mx-40 pb-16 text-lg text-[#452B1F]"
+          >
             {Content ? <Content /> : <p>Content not available</p>}
           </article>
         </div>
