Add additional postImages

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -53,7 +53,7 @@ const formatDate = (date: Date) => {
       </div>
 
       <div class="flex flex-col justify-center mx-auto">
-        <div class="mx-auto ml-4 md:ml-12 mr-7 md:mr-16 max-w-[1200px]">
+        <div class="mx-auto ml-2 md:ml-12 mr-2 md:mr-16 max-w-[1200px]">
           <div class="pt-8">
             <div class="ml-4 pb-4">
               <time class="font-bold text-lg tracking-widest">
@@ -89,7 +89,7 @@ const formatDate = (date: Date) => {
             }
           </div>
           <article
-            class="mx-4 sm:mx-8 md:mx-16 lg:mx-24 xl:mx-32 2xl:mx-40 pb-16 text-lg text-[#452B1F]"
+            class="mx-4 sm:mx-8 md:mx-16 lg:mx-24 xl:mx-32 2xl:mx-40 px-6 py-2 text-lg text-[#452B1F] border border-[#b4b4b4ae] drop-shadow-2xl rounded-2xl bg-[#ffffff80]"
           >
             {Content ? <Content /> : <p>Content not available</p>}
           </article>
